examples/test/testpolicy6419.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6419
  namespace: namespace236
spec:
  podSelector:
    matchLabels:
      key7: value3
      key37: value3
      key33: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value45
      podSelector:
        matchLabels:
          key49: value30
